[TVS-71] solving problem in main menu when scrolled. Avoiding third menu level collapsing with main menu in desktop

--- a/sass/_menu.scss
+++ b/sass/_menu.scss
@@ -218,7 +218,7 @@
 	overflow-y: auto;
 }
 
-#header.is-scrolled nav#main-nav:before {
+#header.is-scrolled #mobileMenu nav#main-nav:before {
     content: "";
     display: block;
     width: 100%;
