--- a/sass/_menuTercerNivel.scss
+++ b/sass/_menuTercerNivel.scss
@@ -8,7 +8,7 @@
 	@include mq($screen-sm-min){
 		float: right;
 		position: sticky;
-		top: sizeEM(70);
+		top: sizeEM(290);
 		width: anchoPorcentaje(213);
 	}
 	
